# Glenda

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  config.toml  test.toml
.cargo/: config.toml
.github/: copilot-instructions.md
config/: manifest.toml
docs/: lab-1.md  lab-2.md  lab-3.md  lab-4.md
drivers/: Cargo.toml
drivers/src/uart/: irq.rs  mod.rs
drivers/uart/: Cargo.toml
drivers/uart/src/: irq.rs  uart.rs  utf8.rs
examples/hello/: Cargo.toml  build.sh  linker.ld
examples/hello/src/: main.rs
include/: sys.h
include/kernel/: sys.h
include/kernel/syscall/: arch.h  num.h
kernel/: Cargo.toml  build.rs
kernel/.cargo/: config.toml
kernel/src/: boot.S  boot.rs  cap.rs  dtb.rs  hart.rs  hart_tp.S  initrd.rs  linker.ld  main.rs  printk.rs  sbi.rs  trap.rs
kernel/src/asm/: boot.S  payload.S  sbi.S  trampoline.S  vector.S
kernel/src/boot/: info.rs  initrd.rs  mod.rs  multiboot2.rs
kernel/src/bootloader/: info.rs  initrd.rs  mod.rs  multiboot2.rs
kernel/src/cap/: capability.rs  captype.rs  cnode.rs  cspace.rs  invoke.rs  method.rs  mod.rs
kernel/src/dtb/: mod.rs  parser.rs  types.rs
kernel/src/fs/: bitmap.rs  buffer.rs  buffer_list.rs  dentry.rs  file.rs  fs.rs  inode.rs  mod.rs  path.rs  virtio.rs
kernel/src/init/: bootloader.rs  dtb.rs  fs.rs  hart.rs  harts.rs  initrd.rs  sbi.S  (+7 more)
service/: hello.c  start.S
service/hello/: Makefile  hello.c  link.ld  start.S
src/: boot.S  linker.ld  main.rs  uart.rs
src/driver/: uart.rs
xtask/: Cargo.toml
xtask/src/: build.rs  config.rs  fs.rs  main.rs  pack.rs  qemu.rs  util.rs
(+97 files in other folders)
