[workspace]
members = [
    "kernel",
    "xtask",
    "lib/libglenda-rs",
    "service/9ball",
    "service/factotum",
    "service/unicorn",
    "drivers/virtio/common",
    "drivers/virtio/block",
    "drivers/ns16550a",
    "examples/hello",
]
resolver = "2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
